--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,162 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.card
+{
+  overflow: hidden;
+  background-color: #1A1B21;
+  border-radius: 10px 10px 10px 10px;
+  font-family: 'Inter';
+  font-style: normal;
+  width: min-content;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+
+.container
+{
+  padding: 2px 16px;
+  line-height: 15px;
+  
+}
+
+.btn-container
+{
+  display:flex;
+  flex-direction: row;
+  justify-content:space-evenly;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  padding-bottom: 30px;
+  
+}
+
+.container > p
+{
+  color: #ff7e5e;
+
+}
+
+.text-container
+{
+  padding-bottom:20px;
+}
+
+.about-container
+{
+  display: flex;
+  flex-direction: column;
+  flex-wrap:wrap;
+  justify-content:left;
+  align-items:flex-start;
+  padding: 0px 30px 0px 30px;
+  overflow-wrap: normal;
+  text-align: left;
+  
+
+}
+
+.about-container > p 
+{
+  margin-top:1px;
+  display:flex;
+  flex-direction:row;
+  overflow-wrap: normal;
+  
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 150%;
+
+}
+
+.about-container > h1
+{
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1px;
+
+}
+
+
+.btn
+{
+ 
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 9px 13px 9px 11px;
+  gap: 8px;
+  cursor:pointer;
+  width: 115px;
+  height: 34px;
+  border: 0;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+
+  
+}
+
+.btn:hover
+{
+  background: #dd6713;
+  color: white;
+  fill:red;
+  
+}
+
+.btn:hover > svg path
+{
+  fill: white;
+}
+
+
+
+.btn-alt
+{
+  
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 9px 13px 9px 11px;
+  color: white;
+  gap: 8px;
+  cursor:pointer;
+  background: #238636;
+  border: 0;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+  width: 115px;
+  height: 34px;
+}
+
+.btn-alt:hover
+{
+  background: #25bd41;
+  
+}
+
+.footer
+{
+  background: #161619;
+  padding-top:20px;
+  padding-bottom:20px;
+  display:flex;
+  flex-direction:row;
+  justify-content:space-around;
+
 }
 
 @keyframes App-logo-spin {
